[field] Fix alignment of timestamps in diff annotation tooltips

--- a/packages/@sanity/field/src/diff/annotations/DiffAnnotationTooltipContent.css
+++ b/packages/@sanity/field/src/diff/annotations/DiffAnnotationTooltipContent.css
@@ -38,7 +38,8 @@
 }
 
 .timeAgo {
-  margin: 0 var(--small-padding);
+  margin: 0 var(--small-padding) 0 auto;
+  padding-left: var(--small-padding);
   font-size: var(--font-size-small);
   color: var(--text-muted);
 }
